整理前端文件

--- a/Java/project3.0/src/main/resources/static/home_page.html
+++ b/Java/project3.0/src/main/resources/static/home_page.html
@@ -7,16 +7,16 @@
     <title>智慧停车 首页</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="format-detection" content="email=no, address=no, telephone=no">
-    <script type="text/javascript" src="web/js/Home_page_js.js"></script>
+    <script type="text/javascript" src="js/Home_page_js.js"></script>
     <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=gbgh1ToI28RT2odzaWlu6vL0zpnigpOg"></script>
-    <script type="text/javascript" src="web/js/jquey-3.5.1.min.js"></script>
+    <script type="text/javascript" src="js/jquey-3.5.1.min.js"></script>
 
 
-  <link href=web/home_page/manifest/rewordManifest/vendor.css rel="stylesheet">
-  <link href=web/home_page/manifest/rewordManifest/common.css rel="stylesheet">
+  <link href=css/vendor.css rel="stylesheet">
+  <link href=css/common2.css rel="stylesheet">
   <!-- 通用页面加载脚本 -->
-  <script src=web/home_page/new/js/flexible-9db49.js></script>
-    <script src=web/js/echarts.min.js></script>
+  <script src=js/flexible-9db49.js></script>
+    <script src=js/echarts.min.js></script>
 </head>
 
 <body>
@@ -48,7 +48,7 @@
         <a href="#" id = "solution_orderAndconsult_10055" class="goToBespeak portalCollect" data-type="2" data-value="10055" data-label="智慧停车">
           <button id="buy_appoint" class="iconChat fl bluBtu "  data-type="3" data-number="1" data-id="10055">关于我们&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</button></a>
         <section class="bannerRightCircle">
-            <img src="web/home_page/release/image/20210525/m-wuye.png" alt="智慧停车"/>
+            <img src="home/release/image/20210525/m-wuye.png" alt="智慧停车"/>
         </section>
     </section>
 </section>
@@ -71,17 +71,17 @@
         <ul class="curdefault clearfix">
             <li class="contentLi fl">
                 <h2>基础监控</h2>
-                <img src="web/home_page/pubic-icon1.png" />
+                <img src="home/pubic-icon1.png" />
                 <p>支持视频采集、实时查看和存储回放；统一云端存储与管理。</p>
             </li>
             <li class="contentLi fl">
                 <h2>云平台</h2>
-                <img src="web/home_page/pubic-icon3.png"/>
+                <img src="home/pubic-icon3.png"/>
                 <p>通过服务端与智能设备对接，实现可视化运营管理。</p>
             </li>
             <li class="contentLi fl">
                 <h2>车位管理</h2>
-                <img src="web/home_page/pubic-icon2.png"/>
+                <img src="home/pubic-icon2.png"/>
                 <p>提供车位引导、车位标识等功能，方便您的出行</p>
             </li>
         </ul><br> <br>
@@ -113,7 +113,7 @@
             <ul class="type2 clearfix">
                 <li class="contentLi fl content_div">
                     <a href="table.html" target="_blank">
-                        <img src="web/img/school.jpeg">
+                        <img src="home/school.jpeg">
                         <h2>查看数据</h2>
                         <p>可查询车位情况，用户信息，支付信息等数据。</p>
                     </a>
