--- a/Java/project3.0/src/main/resources/static/table.html
+++ b/Java/project3.0/src/main/resources/static/table.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>车位数据</title>
-    <link rel="stylesheet" href="layui/css/layui.css" media="all">
+    <link rel="stylesheet" href="css/layui.css" media="all">
     <style>
         body{margin: 10px;}
         .demo-carousel{height: 200px; line-height: 200px; text-align: center;}
@@ -18,14 +18,9 @@
     <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="detail">查看</a>
     <a class="layui-btn layui-btn-xs" lay-event="more">更多 <i class="layui-icon layui-icon-down"></i></a>
 </script>
-<script src="web/js/jquey-3.5.1.min.js"></script>
+<script src="js/jquey-3.5.1.min.js"></script>
 <script src="layui/layui.js"></script>
 <script>
-
-
-
-
-
 
 
     layui.config({
@@ -230,7 +225,7 @@
                                 '            经度: <input id = "x6" style="width: 80px;height: 20px;" type="number">\n' +
                                 '        </td>\n' +
                                 '    </tr>' +
-                                '<script src="web/js/jquey-3.5.1.min.js"><\/script>' +
+                                '<script src="js/jquey-3.5.1.min.js"><\/script>' +
                                 '<script>' +
                                 'function liststrs(){' +
                                 'var strs = new Array();' +
