--- a/Java/project3.0/src/main/resources/static/Login_page_2.html
+++ b/Java/project3.0/src/main/resources/static/Login_page_2.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Landing...</title>
-  <link rel="stylesheet" href="login22/login_2/style.css">
+  <title>欢迎来到--智慧停车</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <div class="container">
@@ -40,6 +40,6 @@
       </div>
     </div>
   </div>
-  <script src="login22/login_2/main.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
