--- a/Java/project3.0/src/main/resources/static/register_page.html
+++ b/Java/project3.0/src/main/resources/static/register_page.html
@@ -9,14 +9,14 @@
   <title>注册账号 - 智慧停车</title>
   <meta name="keywords" content="">
   <meta name="description" content="">
-  <link rel="stylesheet" href="web/register_page/css/login.css">
+  <link rel="stylesheet" href="css/login.css">
 
 
-  <link href="web/register_page/layui/css/layui.css" rel="stylesheet" />
-  <script src="web/register_page/layui/layui.js" type="text/javascript"></script>
-  <script src="web/register_page/js/jquery-1.8.3.min.js" type="text/javascript" charset="utf-8"></script>
-  <script src="web/register_page/js/area.js" type="text/javascript"></script>
-  <script src="web/register_page/js/selectMore.js" type="text/javascript"></script>
+  <link href="register/layui/css/layui.css" rel="stylesheet" />
+  <script src="register/layui/layui.js" type="text/javascript"></script>
+  <script src="register/js/jquery-1.8.3.min.js" type="text/javascript" charset="utf-8"></script>
+  <script src="register/js/area.js" type="text/javascript"></script>
+  <script src="register/js/selectMore.js" type="text/javascript"></script>
 </head>
 
 <body ontouchstart class="page-register-forget">
@@ -46,7 +46,7 @@
             <input type="text" name="captcha" class="form-control" placeholder="验证码" maxlength="5">
           </div>
           <div class="col-50">
-            <img src="web/register_page/captcha.jpg" alt="" class="captcha change-captcha" id="J_captcha">
+            <img src="register/captcha.jpg" alt="" class="captcha change-captcha" id="J_captcha">
             <a href="#" class="captcha change-captcha">换一张</a>
           </div>
         </div>
