--- a/Java/project3.0/src/main/resources/static/register_page.html
+++ b/Java/project3.0/src/main/resources/static/register_page.html
@@ -9,17 +9,48 @@
   <title>注册账号 - 智慧停车</title>
   <meta name="keywords" content="">
   <meta name="description" content="">
-  <link rel="stylesheet" href="css/login.css">
+  <meta charset="utf-8">
+
+  <link rel="stylesheet" href="./css/layui.css">
+  <link rel="stylesheet" type="text/css" href="css/zcity.css">
+  <link rel="stylesheet" href="./css/login.css">
 
 
-  <link href="register/layui/css/layui.css" rel="stylesheet" />
-  <script src="register/layui/layui.js" type="text/javascript"></script>
-  <script src="register/js/jquery-1.8.3.min.js" type="text/javascript" charset="utf-8"></script>
-  <script src="register/js/area.js" type="text/javascript"></script>
-  <script src="register/js/selectMore.js" type="text/javascript"></script>
+  <script src="js/area.js" type="text/javascript"></script>
+  <script src="js/element.js" type="text/javascript"></script>
+  <script src="js/form.js" type="text/javascript"></script>
+  <script src="js/jquey-3.5.1.min.js" type="text/javascript"></script>
+  <script src="js/layui.js" type="text/javascript"></script>
+  <script src="js/selectMore.js" type="text/javascript"></script>
+
+  <script type="text/javascript" src="js/register.js"></script>
+  <script type="text/javascript" src="./js/main.js"></script>
+
+<!--  <script type="text/javascript" src="./js/jquery-1.8.0.js">-->
+    <!-- Scripts -->
+
+<!--    <script src="js/https://code.jquery.com/jquery-3.4.1.slim.min.js" crossOrigin="anonymous"></script>-->
+  <script src="js/distpicker.js"></script>
+<!--  <script src="js/https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" crossorigin="anonymous">-->
+  </script>
+
+
+
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>中国城市地区多级联动</title>
+<!--  <link rel="stylesheet" href="css/bootstrap_4.3.1.css" rossorigin="anonymous">-->
+
+
+
+
 </head>
 
-<body ontouchstart class="page-register-forget">
+
+
+
+<body id="body"  class="page-register-forget">
 <div class="container">
   
 
@@ -34,8 +65,8 @@
         <div class="form-error"></div>
         <div class="form-group">
           <div class="col-100">
-            <label>手机号码：</label>
-            <input type="tel" name="phone" id="phone" class="form-control" placeholder="手机号码" maxlength="11">
+            <label>用户手机号码：</label>
+            <input type="tel" name="phone" id="phone" class="form-control" placeholder="用户手机号码" maxlength="11">
           </div>
         </div>
         <div class="form-group">
@@ -63,7 +94,8 @@
           </div>
         </div>
 
-  
+
+
         <div class="form-error"></div>
         <div class="form-group">
           <div class="col-100">
@@ -94,50 +126,25 @@
         </div>
 
 
+
+
         <div class="form-group">
-          <div class="col-100">
-            <label>选择省份：</label>
-            <select name="province" class="form-control">
-              <option value="">请选择省份</option>
-              <option value="100">北京</option>
-              <option value="200">广东</option>
-              <option value="210">上海</option>
-              <option value="230">重庆</option>
-              <option value="771">广西</option>
-              <option value="991">西藏</option>
-              <option value="931">甘肃</option>
-              <option value="471">内蒙</option>
-              <option value="311">河北</option>
-              <option value="451">黑龙江</option>
-              <option value="431">吉林</option>
-              <option value="240">辽宁</option>
-              <option value="220">天津</option>
-              <option value="250">江苏</option>
-              <option value="571">浙江</option>
-              <option value="591">福建</option>
-              <option value="898">海南</option>
-              <option value="871">云南</option>
-              <option value="280">四川</option>
-              <option value="851">贵州</option>
-              <option value="971">青海</option>
-              <option value="290">陕西</option>
-              <option value="270">湖北</option>
-              <option value="731">湖南</option>
-              <option value="791">江西</option>
-              <option value="551">安徽</option>
-              <option value="351">山西</option>
-              <option value="531">山东</option>
-              <option value="371">河南</option>
-              <option value="951">宁夏</option>
-            </select>
-          </div>
+        <div class="test">
+            <div data-toggle="distpicker">
+              <select class="form-control" data-province="选择省"></select>
+              <select  class="form-control " data-city="选择市"></select>
+              <select class="form-control " data-district="选择区"></select>
+            </div>
         </div>
+        </div>
+
+        <div class="undo">
 
         <div class="form-group">
           <div class="col-100" style="padding-top: 20px;">
-            <button type="submit" class="btn" id="J_register">填写完成并提交</button>
+            <button type="submit" class="btn" id="register">填写完成并提交</button>
           </div>
-        </div>
+       </div>
         <div class="form-group">
           <div class="col-100 password-rule-box">
             <p class="title">密码规则：</p>
@@ -149,42 +156,49 @@
             <p>6、口令中不能出现3位以上（含三位）重复字母、数字、特殊字符；</p>
             <p>7、口令中不能含有手机号后四位；</p>
             <p>8、5次以内不得设置相同的口令；</p>
+            <p>9、口令需避免<span class="showRuleModal">易猜解口令</span>；</p>
           </div>
+        </div>
         </div>
       </form>
     </div>
   </div>
+  <style>
+    .test {
+      position: relative;
+      right:96.5%;
+      width: 400px;
+      height: 100px;
+      margin: 18px 450px;
+    }
 
-<!--  <script type="text/javascript" >-->
-<!--    $("#J_register").click(function () {-->
-<!--      $.ajax({-->
-<!--        url: "http://localhost:8080/project_war/register",-->
-<!--        method: "post",-->
-<!--        data: {'phone': $("#phone").val(),'car_id': $("#car_id").val(), 'username': $("#username").val(),'password': $("#password").val()},-->
-<!--        xhrFields: {-->
-<!--          withCredentials: true //允许跨域带Cookie-->
-<!--        },-->
-<!--        success: function (result) {-->
-<!--          window.location.href ="login_page.html";-->
-<!--        },-->
-<!--        error: function (result) {-->
-<!--          alert(result.responseText)-->
-<!--        }-->
-<!--      })-->
-<!--    });-->
-<!--  </script>-->
+    .form-inline {
+      margin-left: 35px;
+      margin-top: 25px;
+    }
+  </style>
+
+  <script type="text/javascript" >
+    $("#register").click(function () {
+      $.ajax({
+        url: "http://localhost:8080/project_war/register",
+        method: "post",
+        data: {'phone': $("#phone").val(),'car_id': $("#car_id").val(), 'username': $("#username").val(),'password': $("#password").val()},
+        xhrFields: {
+          withCredentials: true //允许跨域带Cookie
+        },
+        success: function (result) {
+          window.location.href ="login_page.html";
+        },
+        error: function (result) {
+          alert(result.responseText)
+        }
+      })
+    });
+  </script>
+
 
 </div>
 </body>
-
-<!--获取相关的选中事件-->
-<script type="text/javascript">
-  function getSelectInfo() {
-    var getSelectProvence = $('#province option:selected').text();
-    var getSelectCity = $('#city option:selected').text();
-    var getSelectCity = $('#district option:selected').text();
-    alert("获取的内容:--省份:" + getSelectProvence + "--地级市:" + getSelectCity + "--县区:" + getSelectCity);
-  }
-</script>
 
 </html>
