更新了注册页面

--- a/Java/project3.0/src/main/resources/static/monitor_page1.html
+++ b/Java/project3.0/src/main/resources/static/monitor_page1.html
@@ -44,7 +44,7 @@
         <a href="#" id = "solution_orderAndconsult_10055" class="goToBespeak portalCollect" data-type="2" data-value="10055" data-label="智慧停车">
           <button id="buy_appoint" class="iconChat fl bluBtu "  data-type="3" data-number="1" data-id="10055">关于我们&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</button></a>
         <section class="bannerRightCircle">
-            <img src="home/release/image/20210525/m-wuye.png" alt="智慧停车"/>
+            <img src="img/m-wuye.png" alt="智慧停车"/>
         </section>
     </section>
 </section>
