--- a/Java/project3.0/src/main/resources/static/register_page.html
+++ b/Java/project3.0/src/main/resources/static/register_page.html
@@ -23,7 +23,6 @@
   <script src="js/layui.js" type="text/javascript"></script>
   <script src="js/selectMore.js" type="text/javascript"></script>
 
-  <script type="text/javascript" src="js/register.js"></script>
   <script type="text/javascript" src="./js/main.js"></script>
 
 <!--  <script type="text/javascript" src="./js/jquery-1.8.0.js">-->
@@ -77,7 +76,7 @@
             <input type="text" name="captcha" class="form-control" placeholder="验证码" maxlength="5">
           </div>
           <div class="col-50">
-            <img src="register/captcha.jpg" alt="" class="captcha change-captcha" id="J_captcha">
+            <img src="img/captcha.jpg" alt="" class="captcha change-captcha" id="J_captcha">
             <a href="#" class="captcha change-captcha">换一张</a>
           </div>
         </div>
@@ -125,13 +124,10 @@
           </div>
         </div>
 
-
-
-
         <div class="form-group">
-        <div class="test">
-            <div data-toggle="distpicker">
-              <select class="form-control" data-province="选择省"></select>
+          <div class="test">
+          <div data-toggle="distpicker">
+              <select class="form-control" data-province="请选择停车场所在省"></select>
               <select  class="form-control " data-city="选择市"></select>
               <select class="form-control " data-district="选择区"></select>
             </div>
@@ -156,7 +152,6 @@
             <p>6、口令中不能出现3位以上（含三位）重复字母、数字、特殊字符；</p>
             <p>7、口令中不能含有手机号后四位；</p>
             <p>8、5次以内不得设置相同的口令；</p>
-            <p>9、口令需避免<span class="showRuleModal">易猜解口令</span>；</p>
           </div>
         </div>
         </div>
