--- a/Java/project3.0/src/main/resources/static/table.html
+++ b/Java/project3.0/src/main/resources/static/table.html
@@ -19,7 +19,7 @@
     <a class="layui-btn layui-btn-xs" lay-event="more">更多 <i class="layui-icon layui-icon-down"></i></a>
 </script>
 <script src="js/jquey-3.5.1.min.js"></script>
-<script src="layui/layui.js"></script>
+<script src="js/layui.js"></script>
 <script>
 
 
