--- a/Java/project3.0/src/main/resources/static/monitor_page1.html
+++ b/Java/project3.0/src/main/resources/static/monitor_page1.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="x-ua-Compatible" content="ie=edge,chrome=1">
-    <title>智慧停车 首页</title>
+    <title>智慧停车 停车场监控</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="format-detection" content="email=no, address=no, telephone=no">
     <script type="text/javascript" src="js/jquey-3.5.1.min.js"></script>
-	<script type="text/javascript" src="js/vedio.js"></script>
+	<script type="text/javascript" src="js/monitor_page/vedio.js"></script>
 
   <link href="css/vendor.css" rel="stylesheet">
   <link href="css/common2.css" rel="stylesheet">
