--- a/Java/project3.0/src/main/resources/static/register_page.html
+++ b/Java/project3.0/src/main/resources/static/register_page.html
@@ -93,16 +93,6 @@
           </div>
         </div>
 
-
-
-        <div class="form-error"></div>
-        <div class="form-group">
-          <div class="col-100">
-            <label>用户名：</label>
-            <input type="text" id="username" name="username" class="form-control" placeholder="用户名" maxlength="20">
-            <p class="help-block">用户名长度必须在3~20之间</p>
-          </div>
-        </div>
         <div class="form-group">
           <div class="col-100">
             <label>密码：</label>
@@ -123,7 +113,20 @@
             <p class="help-block"></p>
           </div>
         </div>
-
+        <div class="form-group">
+          <div class="col-100">
+            <label>车位数量：</label>
+            <input type="text" name="car_id" id="num" class="form-control" placeholder="车位数量" maxlength="20">
+            <p class="help-block"></p>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-100">
+            <label>车位数量：</label>
+            <input type="text" name="car_id" id="billing" class="form-control" placeholder="车位数量" maxlength="20">
+            <p class="help-block"></p>
+          </div>
+        </div>
         <div class="form-group">
           <div class="test">
           <div data-toggle="distpicker">
