--- a/Java/project3.0/src/main/resources/static/Login_page_2.html
+++ b/Java/project3.0/src/main/resources/static/Login_page_2.html
@@ -15,14 +15,14 @@
         <h2 class="form-title">停车场管理员登录</h2>
         <input placeholder="用户名" />
         <input type="password" placeholder="密码" />
-        <div class="submit-btn">立即登录</div>
+        <a class="submit-btn" href="home_page.html">立即登录</a>
         <a href="register_page.html">还没有账号？立即注册</a>
       </form>
       <form class="sign-up-form">
         <h2 class="form-title">超级管理员登录</h2>
         <input placeholder="用户名" />
         <input type="password" placeholder="密码" />
-        <div class="submit-btn">立即登录</div>
+        <a class="submit-btn"  href="home_page.html">立即登录</a>
       </form>
     </div>
     <div class="desc-warp">
